[project]
name = "keys"
version = "0.1.0"
description = "API Key Manager"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard]",
  "starlette>=1.0.0",
  "sqlmodel",
  "pydantic-settings",
  "jinja2",
  "python-multipart",
  "openai>=2.28.0",
  "aiohttp>=3.13.3",
  "pre-commit>=4.5.1",
  "itsdangerous>=2.2.0",
  "loguru>=0.7.3",
]
